--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+# Based on https://github.com/github/gitignore/blob/main/Go.gitignore
 #
 # Binaries for programs and plugins
 *.exe
@@ -27,6 +26,6 @@ go.work.sum
 # env file
 .env
 
-# Editor/IDE
-# .idea/
-# .vscode/
+# VS Code
+.vscode/
+__debug_bin*
