--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,9 +1,6 @@
+version: "2"
 linters:
-  # Disable all linters.
-  # Default: false
-  disable-all: true
-  # Enable specific linter
-  # https://golangci-lint.run/usage/linters/#enabled-by-default
+  default: none
   enable:
     - asasalint
     - asciicheck
@@ -15,7 +12,6 @@ linters:
     - copyloopvar
     - cyclop
     - decorder
-    # - depguard
     - dogsled
     - dupl
     - dupword
@@ -26,12 +22,10 @@ linters:
     - errname
     - errorlint
     - exhaustive
-    # - exhaustruct
     - fatcontext
     - forbidigo
     - forcetypeassert
     - funlen
-    - gci
     - ginkgolinter
     - gocheckcompilerdirectives
     - gochecknoglobals
@@ -43,15 +37,11 @@ linters:
     - gocyclo
     - godot
     - godox
-    - gofmt
-    - gofumpt
     - goheader
-    - goimports
     - gomoddirectives
     - gomodguard
     - goprintffuncname
     - gosec
-    - gosimple
     - gosmopolitan
     - govet
     - grouper
@@ -91,10 +81,8 @@ linters:
     - spancheck
     - sqlclosecheck
     - staticcheck
-    - stylecheck
     - tagalign
     - tagliatelle
-    # - tenv
     - testableexamples
     - testifylint
     - testpackage
@@ -104,28 +92,30 @@ linters:
     - unparam
     - unused
     - usestdlibvars
-    # - varnamelen
     - wastedassign
     - whitespace
     - wrapcheck
     - wsl
-  # Enable presets.
-  # https://golangci-lint.run/usage/linters
-  # Default: []
-  # presets:
-  #   - bugs
-  #   - comment
-  #   - complexity
-  #   - error
-  #   - format
-  #   - import
-  #   - metalinter
-  #   - module
-  #   - performance
-  #   - sql
-  #   - style
-  #   - test
-  #   - unused
-  # Enable only fast linters from enabled linters set (first run won't be fast)
-  # Default: false
-  # fast: true
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
