chore: Fix linter config

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,4 +1,5 @@
 version: "2"
+
 linters:
   default: none
   enable:
@@ -95,7 +96,8 @@ linters:
     - wastedassign
     - whitespace
     - wrapcheck
-    - wsl
+    - wsl_v5
+
   exclusions:
     generated: lax
     presets:
@@ -107,15 +109,30 @@ linters:
       - third_party$
       - builtin$
       - examples$
+
+  settings:
+    tagliatelle:
+      case:
+        rules:
+          yaml: snake
+    wsl_v5:
+      allow-first-in-block: true
+      allow-whole-block: false
+      branch-max-lines: 2
+
 formatters:
   enable:
     - gci
-    - gofmt
     - gofumpt
-    - goimports
   exclusions:
     generated: lax
     paths:
       - third_party$
       - builtin$
       - examples$
+  settings:
+    gci:
+      sections:
+        - standard
+        - prefix(github.com/kirill-shtrykov/minimon)
+        - default
